2000-09-15  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc: Add new options: -s and -i.
	* utils.sgml: Document the new options.

Tue Sep 12 22:45:28 2000  Christopher Faylor <cgf@cygnus.com>

	* kill.cc (main): Change behavior of -f so that it will force the
	killing of a cygwin process after waiting 2 tenths of a second for it
	to terminate.
	(forcekill): Add an extra argument determining whether to wait for the
	process to exit.

Sun Sep 10 12:50:02 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Refine dumper.exe message.

Mon Aug 28 21:55:56 2000  Christopher Faylor <cgf@cygnus.com>

	* kill.c (main): Avoid skipping next argument when a signal number is
	specified.
	* Makefile.in: Always clean dumper.exe.

Fri Aug 25 12:41:53 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Only build dumper.exe when all of its library and
	include dependencies are available.

Fri Aug 25 11:44:29 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Make failure to build dumper.exe a non-error.

Thu Aug 24 18:02:35 2000  Christopher Faylor <cgf@cygnus.com>

	* ps.cc (main): Always print a cygwin process using cygwin paths.

2000-08-24  Egor Duda  <deo@logos-m.ru>

	* Makefile.in: Add dumper.exe target and associated mechanisms for building it.
	* dumper.cc: New file.
	* dumper.h: New file.
	* module_info.cc: New file.
	* parse_pe.cc: New file.

Mon Jul 31 15:12:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* passwd.c (main): Initialize oldpwd before beeing used.

Sat Jul 29 00:44:46 2000  Christopher Faylor <cgf@cygnus.com>

	* kill.cc (main): Add '-f' option to force termination of a process.
	(forcekill): New function.
	* ps.cc (main): Add '-W' option to list Windows pids as well as Cygwin
	pids.
	(dummyprocessmodules): New function.
	(GetModuleFileNameEx95): New function.
	(init_win): New function.
	(to_time_t): New function.

Thu Jul 27 22:54:28 2000  Jason Tishler <jt@dothill.com>
